Add mensabot to certificate-prod.yml

--- a/kubernetes/certificate/certificate-prod.yml
+++ b/kubernetes/certificate/certificate-prod.yml
@@ -27,6 +27,7 @@ spec:
     - sonarqube.universphere.cloud
     - docu.universphere.cloud
     - kafkaui.universphere.cloud
+    - mensabot.universphere.cloud
   # Issuer references are always required.
   issuerRef:
     name: prod-issuer
